welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:48: error: ':' expected but ')' found.
	def marquerSol(c){
                        ^MethodsPicture:66: error: identifier expected but '}' found.
}
^